fixed automapper errors
